--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,9 @@ annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=/home/user1/Documents/JARS/com.mysql.jdbc_5.1.5.jar;file=/home/user1/Documents/JARS/commons-lang3-3.4.jar;file=/home/user1/Documents/JARS/mysql-connector-java-5.1.38-bin.jar;file=/home/user1/hevra/dom4j-1.1.jar;file=/home/user1/hevra/xmlbeans-2.3.0.jar;file=/home/user1/hevra/poi-ooxml-schemas-3.7-20101029.jar;file=/home/user1/hevra/poi-ooxml-3.7-20101029.jar;file=/home/user1/hevra/poi-2.0-pre3-20030728.jar/poi-2.0-pre3-20030728.jar;file=/home/user1/hevra/poi-3.8-beta2-20110408.jar;output=bin;
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=/home/user1/Documents/JARS/com.mysql.jdbc_5.1.5.jar;file=/home/user1/Documents/JARS/commons-lang3-3.4.jar;file=/home/user1/Documents/JARS/mysql-connector-java-5.1.38-bin.jar;file=/home/user1/hevra/dom4j-1.1.jar;file=/home/user1/hevra/xmlbeans-2.3.0.jar;file=/home/user1/hevra/poi-ooxml-schemas-3.7-20101029.jar;file=/home/user1/hevra/poi-ooxml-3.7-20101029.jar;file=/home/user1/hevra/poi-3.8-beta2-20110408.jar;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1490275536000
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1495451875000
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -35,7 +35,6 @@ file.reference.com.mysql.jdbc_5.1.5.jar=/home/user1/Documents/JARS/com.mysql.jdb
 file.reference.commons-lang3-3.4.jar=/home/user1/Documents/JARS/commons-lang3-3.4.jar
 file.reference.dom4j-1.1.jar=/home/user1/hevra/dom4j-1.1.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=/home/user1/Documents/JARS/mysql-connector-java-5.1.38-bin.jar
-file.reference.poi-2.0-pre3-20030728.jar=/home/user1/hevra/poi-2.0-pre3-20030728.jar/poi-2.0-pre3-20030728.jar
 file.reference.poi-3.8-beta2-20110408.jar=/home/user1/hevra/poi-3.8-beta2-20110408.jar
 file.reference.poi-ooxml-3.7-20101029.jar=/home/user1/hevra/poi-ooxml-3.7-20101029.jar
 file.reference.poi-ooxml-schemas-3.7-20101029.jar=/home/user1/hevra/poi-ooxml-schemas-3.7-20101029.jar
@@ -51,7 +50,6 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.3.0.jar}:\
     ${file.reference.poi-ooxml-schemas-3.7-20101029.jar}:\
     ${file.reference.poi-ooxml-3.7-20101029.jar}:\
-    ${file.reference.poi-2.0-pre3-20030728.jar}:\
     ${file.reference.poi-3.8-beta2-20110408.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
