--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.com.mysql.jdbc_5.1.5.jar=/home/user1/Documents/JARS/com.mysql.jdb
 file.reference.commons-lang3-3.4.jar=/home/user1/Documents/JARS/commons-lang3-3.4.jar
 file.reference.dom4j-1.1.jar=/home/user1/hevra/dom4j-1.1.jar
 file.reference.mysql-connector-java-5.1.38-bin.jar=/home/user1/Documents/JARS/mysql-connector-java-5.1.38-bin.jar
+file.reference.mysql-connector-java-5.1.46.jar=mysql-connector-java-5.1.46.jar
 file.reference.poi-3.8-beta2-20110408.jar=/home/user1/hevra/poi-3.8-beta2-20110408.jar
 file.reference.poi-ooxml-3.7-20101029.jar=/home/user1/hevra/poi-ooxml-3.7-20101029.jar
 file.reference.poi-ooxml-schemas-3.7-20101029.jar=/home/user1/hevra/poi-ooxml-schemas-3.7-20101029.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.3.0.jar}:\
     ${file.reference.poi-ooxml-schemas-3.7-20101029.jar}:\
     ${file.reference.poi-ooxml-3.7-20101029.jar}:\
-    ${file.reference.poi-3.8-beta2-20110408.jar}
+    ${file.reference.poi-3.8-beta2-20110408.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
